@@ -70,7 +70,8 @@ public class QueryProcessor implements QueryHandler
 
     private static final Logger logger = LoggerFactory.getLogger(QueryProcessor.class);
     private static final MemoryMeter meter = new MemoryMeter().withGuessing(MemoryMeter.Guess.FALLBACK_BEST).ignoreKnownSingletons();
-    private static final long MAX_CACHE_PREPARED_MEMORY = Runtime.getRuntime().maxMemory() / 256;
+    private static final String PREPARED_STATEMENTS_CACHE_SIZE_IN_BYTES_PROPERTY = "cassandra.prepared_statements_cache_size_in_bytes";
+    private static final long MAX_CACHE_PREPARED_MEMORY = Long.getLong(PREPARED_STATEMENTS_CACHE_SIZE_IN_BYTES_PROPERTY, Runtime.getRuntime().maxMemory() / 256);
 
     private static EntryWeigher<MD5Digest, ParsedStatement.Prepared> cqlMemoryUsageWeigher = new EntryWeigher<MD5Digest, ParsedStatement.Prepared>()
     {
@@ -105,6 +106,12 @@ public class QueryProcessor implements QueryHandler
 
     static
     {
+        if (MAX_CACHE_PREPARED_MEMORY <= 0)
+        {
+            logger.error(PREPARED_STATEMENTS_CACHE_SIZE_IN_BYTES_PROPERTY + " must be > 0.");
+            throw new RuntimeException(PREPARED_STATEMENTS_CACHE_SIZE_IN_BYTES_PROPERTY + " must be > 0.");
+        }
+
         preparedStatements = new ConcurrentLinkedHashMap.Builder<MD5Digest, ParsedStatement.Prepared>()
                              .maximumWeightedCapacity(MAX_CACHE_PREPARED_MEMORY)
                              .weigher(cqlMemoryUsageWeigher)
